k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trendyol-gift
  labels:
    name: trendyol-gift
    environment: production
